<resources>
    <string name="app_name">Notebook</string>
    <string name="action_settings">Settings</string>
    <string name="enter">进入</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="edit">编辑</string>
    <string name="please_enter_password_again">请再次输入密码</string>
    <string name="regist">注册</string>
    <string name="quit">退出</string>
    <string name="please_enter_previous_password">请输入旧密码</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="please_enter_new_password_again">请再次输入新密码</string>
    <string name="reset">重置</string>
    <string name="save">保存</string>
    <string name="clean">清空</string>
    <string name="input_content_here">在这里输入内容</string>
    <string name="input_title_here">在这里输入题目</string>
    <string name="set_color">设置颜色</string>
    <string name="delete_article_in_cloud">从云端删除</string>
    <string name="no_internet">未连接到互联网</string>
    <string name="articles_in_cloud">云端笔记列表:</string>
    <string name="get_article_list_in_cloud">获得云端笔记列表</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="blue">蓝色</string>
    <string name="italic">斜体</string>
    <string name="bold">加粗</string>
    <string name="underline">下划线</string>
</resources>
